# bungee_backup

./: .gitignore  Cargo.toml  LICENSE.txt  PKGBUILD  README.md  justfile
.rpm/: bungee_backup.spec
resources/deb-scripts/: postinst  preinst  prerm
resources/default/: bungee-backup.yml
resources/desktop/: bungee-backup.desktop
resources/systemd/: bungee-backup.service
scripts/: Dockerfile-bionic  Dockerfile-fedora-30  Dockerfile-fedora-36  Dockerfile-focal  docker-cmd-bionic.sh  docker-cmd-fedora-30.sh  docker-cmd-fedora-36.sh  docker-cmd-focal.sh
src/: client.rs  ipc.rs  lib.rs  restic.rs  server.rs
tests/: lib.rs
